# etoro-bulk-trades-sdk

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_get_account.py  02_single_trade.py  03_bulk_trade.py  04_rebalance.py
scripts/: probe_open_questions.py
src/etoro_bulk_trades/: __init__.py  _account.py  _at_most_once.py  _auth.py  _execute.py  _http.py  _idempotency.py  _instrument_resolution.py  _pnl.py  _ratelimit.py  _rebalance_planning.py  _resolve.py  _sizing.py  _summary.py  _sync.py  _verify.py  _ws.py  client.py  errors.py  types.py
tests/: conftest.py
tests/integration/: conftest.py  test_bulk_demo.py  test_connect_demo.py  test_open_close_demo.py
tests/unit/: conftest.py  test_account_formulas.py  test_at_most_once.py  test_auth_defaults.py  test_bulk_ceilings.py  test_bulk_concurrent.py  test_classify_at_most_once.py  test_http_retry.py  test_idempotency.py  test_instrument_resolution.py  test_ratelimit.py  test_rebalance_diff.py  test_resolve.py  test_verify_position_disambiguation.py
