[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "etoro-bulk-trades-sdk"
version = "0.1.0"
description = "Async-first Python SDK for the eToro Public API: single trades, bulk trading, rebalancing, WebSocket-first verification."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "eToro Bulk Trades SDK contributors" }]
keywords = ["etoro", "trading", "sdk", "finance", "bulk-trade", "rebalance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/guyba-tr/etoro-bulk-trades-sdk"
Issues = "https://github.com/guyba-tr/etoro-bulk-trades-sdk/issues"
"eToro API Portal" = "https://api-portal.etoro.com/"

[tool.hatch.build.targets.wheel]
packages = ["src/etoro_bulk_trades"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "PYI",  # flake8-pyi
    "RUF",  # ruff-specific
    "ASYNC",
    "PIE",
    "TID",
]
ignore = [
    "E501",  # line-length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "SIM300"]
"examples/**" = ["B008"]
"scripts/**" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
files = ["src/etoro_bulk_trades", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-q",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: opt-in tests that hit the eToro demo environment (requires ETORO_DEMO_API_KEY + ETORO_DEMO_USER_KEY)",
]
